# python-image-resize-service-sample

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml
imageservice/: __init__.py
imageservice/adapters/: mongodb.py
imageservice/domain/: http.py  image.py
imageservice/ports/server/: postback.py
imageservice/ports/workers/: image_resizing_consumer.py
imageservice/repositories/: channels.py  episodes.py  episodes_bucket.py
imageservice/services/: s3.py  sqs.py
imageservice/usecases/: imageresizing.py  resize_img_url_and_itunes_image.py
imageservice/utils/: strings.py
k8s/: cronjob-channel-resize.yaml  cronjob-episodes-resize.yaml  deploy-image-resize.yaml
scripts/: resize_images_from_channel_collection.py  resize_images_from_episodes_collection.py  sanitize_channels.py
